--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <section>
       <h2>Урок 6, взаимодействие с веб-страницей</h2>
       <img
-        id="web-tech-image"
+        id="slider-image"
         src="https://production-it-incubator.s3.eu-central-1.amazonaws.com/file-manager/Image/32f74d50-68d0-46aa-b035-7b3a5300d2c1_js-magic-logo.jpg"
         alt="generated logo"
         width="150"
         height="150"
       />
       <div>
-        <button id="prev-button">prev</button>
-        <button id="next-button">next</button>
+        <button id="prev">prev</button>
+        <button id="next">next</button>
       </div>
     </section>
 
@@ -81,6 +81,10 @@
     <script src="lesson-05/01.js" type="module"></script>
     <script src="lesson-05/02.js" type="module"></script>
     <script src="lesson-06/01.js" type="module"></script>
+   
+    
+    
+ 
     <script src="lesson-07/01.js" type="module"></script>
     <script src="lesson-07/02.js" type="module"></script>
     <script src="lesson-07/03.js" type="module"></script>
