--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section>
       <h2>Урок 6, взаимодействие с веб-страницей</h2>
       <img
-        id="slider-image"
+        id="web-tech-image"
         src="https://production-it-incubator.s3.eu-central-1.amazonaws.com/file-manager/Image/32f74d50-68d0-46aa-b035-7b3a5300d2c1_js-magic-logo.jpg"
         alt="generated logo"
         width="150"
