--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         height="150"
       />
       <div>
-        <button id="prev">prev</button>
-        <button id="next">next</button>
+        <button id="prev-button">prev</button>
+        <button id="next-button">next</button>
       </div>
     </section>
 
